paper/tst/jalangi_test/RESULTS_V2/timeResultsLya.txt
The name of file 3d-cube.js

real	16m4.508s
user	16m18.016s
sys	0m6.388s
The name of file 3d-morph.js

real	3m58.731s
user	3m58.688s
sys	0m0.240s
The name of file 3d-raytrace.js

real	1m0.748s
user	1m0.900s
sys	0m0.108s
The name of file access-binary-trees.js

real	0m1.664s
user	0m1.648s
sys	0m0.040s
The name of file access-fannkuch.js

real	0m0.573s
user	0m0.568s
sys	0m0.004s
The name of file access-nbody.js

real	0m39.880s
user	0m39.900s
sys	0m0.080s
The name of file access-nsieve.js

real	0m0.346s
user	0m0.304s
sys	0m0.052s
The name of file bitops-3bit-bits-in-byte.js

real	0m0.223s
user	0m0.224s
sys	0m0.000s
The name of file bitops-bits-in-byte.js

real	0m0.407s
user	0m0.408s
sys	0m0.000s
The name of file bitops-bitwise-and.js

real	23m19.003s
user	23m18.312s
sys	0m2.040s
The name of file bitops-nsieve-bits.js

real	0m0.341s
user	0m0.336s
sys	0m0.004s
The name of file controlflow-recursive.js

real	0m0.392s
user	0m0.384s
sys	0m0.016s
The name of file crypto-aes.js

real	0m17.805s
user	0m17.788s
sys	0m0.160s
The name of file crypto-md5.js

real	0m7.799s
user	0m7.788s
sys	0m0.056s
The name of file crypto-sha1.js

real	0m6.794s
user	0m6.772s
sys	0m0.040s
The name of file date-format-tofte.js
undefined:1
Y()
^

ReferenceError: Y is not defined
    at eval (eval at _obj (/home/gntousakis/lya/core/src/txfm.js:450:20), <anonymous>:1:1)
    at eval (<anonymous>)
    at eval (/home/gntousakis/lya/core/src/txfm.js:450:20)
    at Object.apply (/home/gntousakis/lya/core/src/txfm.js:153:32)
    at Date.formatDate (/home/gntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-tofte.js:364:26)
    at Object.<anonymous> (/home/gntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-tofte.js:379:28)
    at Object.apply (/home/gntousakis/lya/core/src/txfm.js:300:22)
    at Module._compile (module.js:653:30)
    at Object.Module._extensions..js (module.js:664:10)
    at Module.load (module.js:566:32)

real	0m0.074s
user	0m0.056s
sys	0m0.016s
The name of file date-format-xparb.js
undefined:1
Date.prototype.format0 = function(){return this.getFullYear() + '-' + String.leftPad(this.getMonth() + 1, 2, '0') + '-' + String.leftPad(this.getDate(), 2, '0');}
                                                                             ^

TypeError: String.leftPad is not a function
    at Date.format0 (eval at _obj (/home/gntousakis/lya/core/src/txfm.js:450:20), <anonymous>:1:78)
    at Date.dateFormat (/home/gntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-xparb.js:107:22)
    at Object.<anonymous> (/home/gntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-xparb.js:498:28)
    at Object.apply (/home/gntousakis/lya/core/src/txfm.js:300:22)
    at Module._compile (module.js:653:30)
    at Object.Module._extensions..js (module.js:664:10)
    at Module.load (module.js:566:32)
    at tryModuleLoad (module.js:506:12)
    at Function.Module._load (module.js:498:3)
    at Module.require (module.js:597:17)

real	0m0.075s
user	0m0.064s
sys	0m0.008s
The name of file math-cordic.js

real	1m4.987s
user	1m4.928s
sys	0m0.160s
The name of file math-partial-sums.js

real	12m50.247s
user	12m49.900s
sys	0m0.852s
The name of file math-spectral-norm.js

real	0m0.434s
user	0m0.444s
sys	0m0.004s
The name of file regexp-dna.js

real	0m0.906s
user	0m0.924s
sys	0m0.004s
The name of file string-base64.js

real	1m3.719s
user	1m3.708s
sys	0m0.108s
The name of file string-fasta.js

real	1m14.468s
user	1m14.444s
sys	0m0.140s
The name of file string-tagcloud.js

real	0m26.650s
user	0m26.748s
sys	0m0.152s
The name of file string-unpack-code.js

real	0m9.843s
user	0m9.896s
sys	0m0.028s
The name of file string-validate-input.js

real	0m0.186s
user	0m0.184s
sys	0m0.020s
